# sofdocs-core

./: Cargo.toml  README.md
src/: error.rs  lib.rs
src/canvas/: cpu.rs
src/document/: editor.rs  mod.rs  model.rs  parser.rs  renderer.rs  writer.rs
src/text/: mod.rs  shaping.rs
tests/: image_parse.rs  parse_docx.rs  roundtrip.rs
